--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 				<p><i>Čím víc jí dávám, tím víc jí mám.</i></p>
 				<small>William Shakespeare, <cite title="Romeo a Julie">Romeo a Julie</cite></small>
 			</blockquote>
+			<p>Dne 19.&nbsp;3. se konal závěrečný ples bronzových tanečních v&nbsp;sále na Musilce. Parket byl naplněný tancechtivými středoškoláky. Honzík tančil se svou taneční partnerkou nebo se rozhlížel a&nbsp;kontroloval kurzisty, jestli jim vše jde a&nbsp;jestli nepotřebují vysvětlit nějaké kroky.</p>
+			<p>Zaznamenal také dívku se světle hnědými vlasy a&nbsp;moc krásným úsměvem. Během dámské volenky si pro něj tato dívka přišla, netušíc, že se jedná o&nbsp;učitele. Hnědovlásce se první tanec příliš nezdál, protože Honzík ji držel ji nějak nezvykle pevně a&nbsp;blízko. Možná to i&nbsp;trochu umí, řekla si po chvíli, a&nbsp;pak už se mu jen snažila stačit. Honzík se během tance představil, dívka se představila jako Peťa. Během ploužáku si krátce popovídali, takže Honzík zjistil, že Peťa studuje programátorský gympl. Peťa si při tanci uvědomila, že takhle vážně tančí opravdoví tanečníci, nikoliv absolventi bronzového kurzu. Při valčíku už mu přestala stačit úplně, a&nbsp;tak se zastavili, Honzík jí ho začal vysvětlovat, ale než si to mohla zkusit, hudba dohrála úplně. Honzík Peťu galantně zavedl zpět na místo, a&nbsp;ona, mírně v&nbsp;rozpacích, se s ním rozloučila, že pokud nebude zadán, na další valčík jde opět do učení.</p>
+			<p>Pak přiběhl za svou taneční partnerkou s&nbsp;očima zářícíma. „Ona umí programovat!“ bylo to jediné, co dokázal říci. „Tak nečekej a&nbsp;jdi ji požádat o další tanec“ zněla odpověď jeho partnerky. Od té chvíle už s&nbsp;Honzíkem na tomto plese netančila. Honzík si pro Peťu přišel při prvních tónech následujícího valčíku a&nbsp;už si ho skutečně i zatančili.</p>
 			<div class="row medailon">
 				<div class="span6">
 					<img src="//farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
