--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<div class="span6">
 					<h3>Obřad</h3>
 					<address>
-						<strong><a href="http://zidenice.farnost.cz">Kostel svatého Cyrila a metoděje</a></strong><br>
+						<strong><a href="http://zidenice.farnost.cz">Kostel svatého Cyrila a&nbsp;metoděje</a></strong><br>
 						Gajdošova<br>
 						Brno-Židenice
 					</address>
@@ -128,10 +128,10 @@
 					</p>
 					<div class="well well-small">
 						<h4>Mše pro nevěřící</h4>
-						<p>Mše se skládá ze dvou částí:<ol><li>Bohoslužba slova</li><li>Bohoslužba oběti</li></ol>Během mše se různě vstává, sedá a kleká, viz modrá poučka.</p>
+						<p>Mše se skládá ze dvou částí:<ol><li>Bohoslužba slova</li><li>Bohoslužba oběti</li></ol>Během mše se různě vstává, sedá a&nbsp;kleká, viz modrá poučka.</p>
 						<div class="alert alert-info"><em>Když nevíte co dělat, dělejte to co ostatní.</em></div>
-						<p>V bohoslužbe slova Vás čekají dvě čtení a evangelium (vše jsou to námi vybrané úryvky z Bible), modlitby a zpěvy.</p>
-						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si pokřtění jdou pro Kristovo tělo (hostie, oplatek) a krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
+						<p>V bohoslužbe slova Vás čekají dvě čtení a&nbsp;evangelium (vše jsou to námi vybrané úryvky z&nbsp;Bible), modlitby a&nbsp;zpěvy.</p>
+						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si pokřtění jdou pro Kristovo tělo (hostie, oplatek) a&nbsp;krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
 					</div>
 				</div>
 				<div class="span6">
