--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="page-header"><h2>Kdy a kde</h2></div>
 			<h3>Harmonogram</h3>
 			<dl class="dl-horizontal">
-				<dt>10.00</dt><dd>Sraz na Škrochově 26</dd>
+				<dt>10.00</dt><dd>Sraz na Škrochově 26 (zdobení aut)</dd>
 				<dt>11.00</dt><dd>Obřad</dd>
 				<dt>12.30</dt><dd>Focení</dd>
 				<dt>13.30</dt><dd>Hostina</dd>
@@ -131,7 +131,7 @@
 						<p>Mše se skládá ze dvou částí:<ol><li>Bohoslužba slova</li><li>Bohoslužba oběti</li></ol>Během mše se různě vstává, sedá a&nbsp;kleká, viz modrá poučka.</p>
 						<div class="alert alert-info"><em>Když nevíte co dělat, dělejte to co ostatní.</em></div>
 						<p>V bohoslužbe slova Vás čekají dvě čtení a&nbsp;evangelium (vše jsou to námi vybrané úryvky z&nbsp;Bible), modlitby a&nbsp;zpěvy.</p>
-						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si pokřtění jdou pro Kristovo tělo (hostie, oplatek) a&nbsp;krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
+						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si křesťané jdou pro Kristovo tělo (hostie, oplatek) a&nbsp;krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
 					</div>
 				</div>
 				<div class="span6">
