Dress code, nbsp

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li><a href="#svatba"><i class="icon-bell"></i> Svatba</a></li>
-						<li><a href="#kdyakde"><i class="icon-calendar"></i> Kdy a kde</a></li>
+						<li><a href="#kdyakde"><i class="icon-calendar"></i> Kdy a&nbsp;kde</a></li>
 						<li><a href="#dary"><i class="icon-gift"></i> Dary</a></li>
 						<li><a href="#download"><i class="icon-download-alt"></i> Ke stažení</a></li>
 					</ul>
@@ -52,7 +52,7 @@
 			<div class="page-header"><h2>Svatba</h2></div>
 			<blockquote>
 				<p><i>Čím víc jí dávám, tím víc jí mám.</i></p>
-				<small>William Shakespeare, <cite title="Romeo a Julie">Romeo a Julie</cite></small>
+				<small>William Shakespeare, <cite title="Romeo a&nbsp;Julie">Romeo a&nbsp;Julie</cite></small>
 			</blockquote>
 			<p>Dne 19.&nbsp;3. se konal závěrečný ples bronzových tanečních v&nbsp;sále na Musilce. Parket byl naplněný tancechtivými středoškoláky. Honzík tančil se svou taneční partnerkou nebo se rozhlížel a&nbsp;kontroloval kurzisty, jestli jim vše jde a&nbsp;jestli nepotřebují vysvětlit nějaké kroky.</p>
 			<p>Zaznamenal také dívku se světle hnědými vlasy a&nbsp;moc krásným úsměvem. Během dámské volenky si pro něj tato dívka přišla, netušíc, že se jedná o&nbsp;učitele. Hnědovlásce se první tanec příliš nezdál, protože Honzík ji držel ji nějak nezvykle pevně a&nbsp;blízko. Možná to i&nbsp;trochu umí, řekla si po chvíli, a&nbsp;pak už se mu jen snažila stačit. Honzík se během tance představil, dívka se představila jako Peťa. Během ploužáku si krátce popovídali, takže Honzík zjistil, že Peťa studuje programátorský gympl. Peťa si při tanci uvědomila, že takhle vážně tančí opravdoví tanečníci, nikoliv absolventi bronzového kurzu. Při valčíku už mu přestala stačit úplně, a&nbsp;tak se zastavili, Honzík jí ho začal vysvětlovat, ale než si to mohla zkusit, hudba dohrála úplně. Honzík Peťu galantně zavedl zpět na místo, a&nbsp;ona, mírně v&nbsp;rozpacích, se s&nbsp;ním rozloučila, že pokud nebude zadán, na další valčík jde opět do učení.</p>
@@ -63,11 +63,11 @@
 					<h3>Pet&shy;ra Kad&shy;le&shy;co&shy;vá</h3>
 					<dl>
 						<dt>Oblíbený citát?</dt><dd>Když už člověk jednou je, tak má koukat aby byl a&nbsp;když kouká aby byl, a&nbsp;je, tak má být to, co je a&nbsp;nemá být to, co není, jak tomu v&nbsp;mnoha případech je.</dd>
-						<dt>Když padá v lese strom a všude okolo není živáčka, který by to slyšel, je slyšet zvuk?</dt><dd>Zombie elf ho jistě slyší.</dd>
-						<dt>Proč prádlo na šňůře schne, i když mrzne?</dt><dd>Proč by neschlo, když se mu chce? Ještě prádlu do toho budu kecat…</dd>
+						<dt>Když padá v lese strom a&nbsp;všude okolo není živáčka, který by to slyšel, je slyšet zvuk?</dt><dd>Zombie elf ho jistě slyší.</dd>
+						<dt>Proč prádlo na šňůře schne, i&nbsp;když mrzne?</dt><dd>Proč by neschlo, když se mu chce? Ještě prádlu do toho budu kecat…</dd>
 						<dt>Co je nejbělejší na světě?</dt><dd>Třpyt.</dd>
 						<dt>Bez které barvy by neexistovala duha?</dt><dd>Bez pruhované.</dd>
-						<dt>Jak byste zajistili světový mír, kdybyste měli neomezené možnosti?</dt><dd>Zrušila bych veškeré kopie systému Windows a je mi jedno, co by to způsobilo.</dd>
+						<dt>Jak byste zajistili světový mír, kdybyste měli neomezené možnosti?</dt><dd>Zrušila bych veškeré kopie systému Windows a&nbsp;je mi jedno, co by to způsobilo.</dd>
 						<dt>Jak byste zastavili globální oteplování?</dt><dd>Vysadila bych zelené rostliny úplně všude kromě svého bytu.</dd>
 						<dt>Kolik kilogramů váží opravdu velký mrak?</dt><dd>Tolik, jako 2 opravdu velké mraky děleno 2.</dd>
 						<dt>Co dělá slunce, když zrovna nesvítí?</dt><dd>Svítí pořád, svítí jinam.</dd>
@@ -76,16 +76,16 @@
 						<dt>Jakou zbraň byste použili proti zombie?</dt><dd>Ohnivé kouzlo.</dd>
 						<dt>Jak byste svou nastávající polovičku ochránili proti komárům?</dt><dd>Tím do zásuvky.</dd>
 						<dt>A jak proti upírům?</dt><dd>Čajem</dd>
-						<dt>Jakým způsobem je možné odemknout nezamčené dveře?</dt><dd>Vezmu klíč, zamknu, odemknu, a jdu dál.</dd>
+						<dt>Jakým způsobem je možné odemknout nezamčené dveře?</dt><dd>Vezmu klíč, zamknu, odemknu, a&nbsp;jdu dál.</dd>
 					</dl>
 				</div>
 				<div class="span6">
 					<img src="img/pitel.png" class="pull-right img-polaroid" alt="Jan Kaláb">
 					<h3>Jan Ka&shy;láb</h3>
 					<dl>
-						<dt>Oblíbený citát?</dt><dd>Rozum a chtíč nemohou být v opozici natrvalo!</dd>
-						<dt>Když padá v lese strom a všude okolo není živáčka, který by to slyšel, je slyšet zvuk?</dt><dd>Ne.</dd>
-						<dt>Proč prádlo na šňůře schne, i když mrzne?</dt><dd>Ono fakt schne?</dd>
+						<dt>Oblíbený citát?</dt><dd>Rozum a&nbsp;chtíč nemohou být v opozici natrvalo!</dd>
+						<dt>Když padá v lese strom a&nbsp;všude okolo není živáčka, který by to slyšel, je slyšet zvuk?</dt><dd>Ne.</dd>
+						<dt>Proč prádlo na šňůře schne, i&nbsp;když mrzne?</dt><dd>Ono fakt schne?</dd>
 						<dt>Co je nejbělejší na světě?</dt><dd><code>0xffffff</code></dd>
 						<dt>Bez které barvy by neexistovala duha?</dt><dd>Žluté.</dd>
 						<dt>Jak byste zajistili světový mír, kdybyste měli neomezené možnosti?</dt><dd>Lobotomií některých lidí.</dd>
@@ -97,13 +97,13 @@
 						<dt>Jakou zbraň byste použili proti zombie?</dt><dd>Motorové pily připevněné na obou stranách oboustranného pádla nebo světelný meč.</dd>
 						<dt>Jak byste svou nastávající polovičku ochránili proti komárům?</dt><dd>Repelentem.</dd>
 						<dt>A jak proti upírům?</dt><dd>Česnekem.</dd>
-						<dt>Jakým způsobem je možné odemknout nezamčené dveře?</dt><dd>Kopem s otočkou.</dd>
+						<dt>Jakým způsobem je možné odemknout nezamčené dveře?</dt><dd>Kopem s&nbsp;otočkou.</dd>
 					</dl>
 				</div>
 			</div>
 		</section>
 		<section class="clearfix" id="kdyakde">
-			<div class="page-header"><h2>Kdy a kde</h2></div>
+			<div class="page-header"><h2>Kdy a&nbsp;kde</h2></div>
 			<h3>Harmonogram</h3>
 			<dl class="dl-horizontal">
 				<dt>10.00</dt><dd>Sraz svatebčanů na Škrochově 26 (zdobení aut, &hellip;)</dd>
@@ -131,11 +131,11 @@
 						<p>Mše se skládá ze dvou částí:<ol><li>Bohoslužba slova</li><li>Bohoslužba oběti</li></ol>Během mše se různě vstává, sedá a&nbsp;kleká, viz modrá poučka.</p>
 						<div class="alert alert-info"><em>Když nevíte co dělat, dělejte to co ostatní.</em></div>
 						<p>V bohoslužbe slova Vás čekají dvě čtení a&nbsp;evangelium (vše jsou to námi vybrané úryvky z&nbsp;Bible), modlitby a&nbsp;zpěvy.</p>
-						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si křesťané jdou pro Kristovo tělo (hostie, oplatek) a&nbsp;krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění a připravení, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
+						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si křesťané jdou pro Kristovo tělo (hostie, oplatek) a&nbsp;krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění a&nbsp;připravení, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
 					</div>
 				</div>
 				<div class="span6">
-					<h3>Hostina</h3>
+					<h3>Hostina &amp; oslava</h3>
 					<address>
 						<strong><a href="http://www.delnickydumbrno.cz">Dělnický dům Židenice</a></strong><br>
 						Jamborova 3323/65<br>
@@ -148,16 +148,18 @@
 					</p>
 					<div class="well well-small">
 						<h4>Focení</h4>
-						<p>Budeme moc rádi, když budete hojně fotit. Vaše zdařilé výtvory nám potom prosím <a href="mailto:pitlicek@gmail.com?subject=Fotky">pošlete</a> a my je zde vystavíme.</p>
+						<p>Budeme moc rádi, když budete hojně fotit. Vaše zdařilé výtvory nám potom prosím <a href="mailto:pitlicek@gmail.com?subject=Fotky">pošlete</a> a&nbsp;my je zde vystavíme.</p>
 						<h4>Víno, pivo, rum</h4>
-						<p>Jelikož my i naše okolí máme radší víno než pivo, tak i na hostině máme připraveno mnohem víc vína. Pivo tam bude, ale když dojde, není to vina hospody :-). Tvrdý alkohol jsme nepřipravili vůbec, pořád hrozí návrat prohibice :-).</p>
+						<p>Jelikož my i&nbsp;naše okolí máme radší víno než pivo, tak i&nbsp;na hostině máme připraveno mnohem víc vína. Pivo tam bude, ale když dojde, není to vina hospody :-). Tvrdý alkohol jsme nepřipravili vůbec, pořád hrozí návrat prohibice :-).</p>
+						<h4>Dress code</h4>
+						<p>Nevíte co na sebe? Oficiální svatební hosté (rodina, příbuzní, &hellip;) samozřejmě pánové oblek, dámy šaty nebo kostým. Ale co na večerní oslavu? Stačí to, v&nbsp;čem chodíte po kanceláři, nebo v&nbsp;čem byste šli do malého divadla. i&nbsp;když příjdete v&nbsp;džínách a&nbsp;košili, my se pohoršovat nebudeme.</p>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section class="clearfix" id="dary">
 			<div class="page-header"><h2>Dary</h2></div>
-			<div class="alert alert-success">Dostaneme od Vás něco do výbavy? <a href="mailto:kalabovatereza@gmail.com?subject=Svatební dar">Napište nám</a>, ať je tabulka níže aktuální, a nedostáváme 42 sad přiborů :).</div>
+			<div class="alert alert-success">Dostaneme od Vás něco do výbavy? <a href="mailto:kalabovatereza@gmail.com?subject=Svatební dar">Napište nám</a>, ať je tabulka níže aktuální, a&nbsp;nedostáváme 42 sad přiborů :).</div>
 			<table class="table" id="gifts">
 				<thead>
 					<tr><th>Dar</th><th>Stav</th></tr>
