Dress code od Petry

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<h4>Víno, pivo, rum</h4>
 						<p>Jelikož my i&nbsp;naše okolí máme radší víno než pivo, tak i&nbsp;na hostině máme připraveno mnohem víc vína. Pivo tam bude, ale když dojde, není to vina hospody :-). Tvrdý alkohol jsme nepřipravili vůbec, pořád hrozí návrat prohibice :-).</p>
 						<h4>Dress code</h4>
-						<p>Nevíte co na sebe? Oficiální svatební hosté (rodina, příbuzní, &hellip;) samozřejmě pánové oblek, dámy šaty nebo kostým. Ale co na večerní oslavu? Stačí to, v&nbsp;čem chodíte po kanceláři, nebo v&nbsp;čem byste šli do malého divadla. i&nbsp;když příjdete v&nbsp;džínách a&nbsp;košili, my se pohoršovat nebudeme.</p>
+						<p>Pokud si nejste jisti, co na sebe, není třeba si tím příliš lámat hlavu. Svatebčané (pozvaní na hostinu) samozřejmě šaty či kostýmek, respektive oblek. Na večerní oslavu stačí nějaké slušné oblečení (smart casual), jako do kanceláře nebo do malého divadla, je jen na vás, nakolik se chcete cítit slavnostně, i&nbsp;když přijdete v&nbsp;džínách a&nbsp;košili, pohoršovat se nebudeme.</p>
 					</div>
 				</div>
 			</div>
